fix: fixed the voltar button for both menus

--- a/views/motoristas/menu-adm.ejs
+++ b/views/motoristas/menu-adm.ejs
@@ -27,7 +27,7 @@
         <button class="btn btn-secondary" onclick="location.href='../viagens/historico'"><strong><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i> Histórico</strong></button>
         <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'"><strong> <i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i> Adicionar Saída</strong></button>
         <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'"><strong> <i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i> Adicionar Chegada</strong></button>
-        <button class="btn btn-secondary" onclick="history.back()"><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../login'"><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
