--- a/views/motoristas/menu-motorista.ejs
+++ b/views/motoristas/menu-motorista.ejs
@@ -25,7 +25,7 @@
         <strong><p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p></strong>
         <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'"><strong><i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i>  Adicionar Saída</strong></button>
         <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'"><strong><i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i> Adicionar Chegada</strong></button>
-        <button class="btn btn-secondary" onclick="history.back()"><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../login'"><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
