--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -102,7 +102,8 @@
             </div>
             <div class="form-group">
                 <label for="veiculo"><strong>Selecione o veículo:</strong></label>
-                <select name="veiculo_ID" id="veiculo" class="form-control">
+                <select name="veiculo_ID" id="veiculo" class="form-control" >
+                    <option value="" disabled selected>Selecione um veículo</option>
                     <% veiculos.forEach(function(veiculo) { %>
                         <option value="<%= veiculo.veiculo_ID %>">
                             <%= veiculo.marca %> - <%= veiculo.modelo %> - <%= veiculo.placa %>
