syle: added placeholders

--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -113,15 +113,15 @@
             </div>
             <div class="form-group">
                 <label for="itinerario"><strong>Itinerário:</strong></label>
-                <input type="text" id="itinerario" name="itinerario" class="form-control" required>
+                <input type="text" id="itinerario" name="itinerario" placeholder="Digite o local de destino" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="servico"><strong>Serviço:</strong></label>
-                <input type="text" id="servico" name="servico" class="form-control" required>
+                <input type="text" id="servico" name="servico" placeholder="Digite o serviço prestado" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="kmSaida"><strong>Quilometragem Inicial:</strong></label>
-                <input type="integer" id="kmSaida" name="kmSaida" class="form-control" required>
+                <label for="kmSaida"><strong>Quilometragem Inicial (Km):</strong></label>
+                <input type="integer" id="kmSaida" name="kmSaida" placeholder="ex: 1000" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="dataSaida"><strong>Data e hora de Saída:</strong></label>
