style: added icons: return and check

--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -127,9 +127,9 @@
                 <label for="dataSaida"><strong>Data e hora de Saída:</strong></label>
                 <input type="datetime-local" id="dataSaida" name="dataSaida" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary"><strong>Confirmar</strong></button>
+            <button type="submit" class="btn btn-primary"><strong><i class="fa-solid fa-check" style="color: #ffffff;"></i> Confirmar</strong></button>
         </form>
-        <button type="button" class="btn btn-primary" onclick="history.back()"><strong>Voltar</strong></button>
+        <button type="button" class="btn btn-primary" onclick="history.back()"><strong><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
