style: margin top so button have enough space

--- a/public/assets/historico.css
+++ b/public/assets/historico.css
@@ -105,6 +105,7 @@ p, .form-label, .text-center {
 }
 .btn {
     margin-bottom: 10px;
+    margin-top: 10px;
     width: 80%;
     padding: 20px;
     font-size: 18px;
