fix: minor change. Changed historico to registro

--- a/views/motoristas/menu-adm.ejs
+++ b/views/motoristas/menu-adm.ejs
@@ -24,7 +24,7 @@
     <strong><p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p></strong>
         <button class="btn btn-secondary" onclick="location.href='../veiculos/gerenciar-veiculos'"><strong><i class="fa-solid fa-gear" style="color: #ffffff;"></i> Gerenciar Veículos</strong></button>
         <button class="btn btn-secondary" onclick="location.href='/motoristas/gerenciar-motoristas'"><strong><i class="fa-solid fa-gear" style="color: #ffffff;"></i> Gerenciar Motoristas</strong></button>
-        <button class="btn btn-secondary" onclick="location.href='../viagens/historico'"><strong><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i> Histórico</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/historico'"><strong><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i> Registros</strong></button>
         <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'"><strong> <i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i> Adicionar Saída</strong></button>
         <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'"><strong> <i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i> Adicionar Chegada</strong></button>
         <button class="btn btn-secondary" onclick="location.href='../login'"><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
