--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -69,7 +69,7 @@
 </head>
 <body>
     <!-- Header -->
-    <%- include('../partials/header.ejs', { title: 'Historico de viagens' }) %>
+    <%- include('../partials/header.ejs', { title: 'REGISTROS' }) %>
     <!-- Botão para baixar PDF -->
      <div class="button-container">
         <button id="download-pdf" class="btn btn-primary">
