--- a/views/motoristas/gerenciar-motoristas.ejs
+++ b/views/motoristas/gerenciar-motoristas.ejs
@@ -3,18 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciar Motoristas</title>
+    <title>Diário de Bordo</title>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/assets/menus.css"> 
-    <!-- FAVICON -->
+    <link rel="stylesheet" type="text/css" href="/assets/menus.css">
+
+     <!-- FAVICON -->
      <link href="/assets/img/logo_jacarei.png" rel="icon">
      <!-- ICONS -->
-     <script src="https://kit.fontawesome.com/34e6a5e2fc.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
 </head>
 <body>
-    <h1>Gerenciar Motoristas</h1>
-    <button onclick="history.back()">Voltar</button>
+    <!-- Header -->
+    <%- include('../partials/header.ejs', { title: 'Gerenciar Motoristas' }) %>
+    <div class="container">
+        <strong><p>Olá, <%= user.nome %>. Gerencie os motoristas:</p></strong>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'"><strong><i class="fa-solid fa-circle-plus" style="color: #ffffff;"></i>  Adicionar Motorista</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'"><strong><i class="fa-solid fa-gear" style="color: #ffffff;"></i> Editar Motorista</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/historico'"><strong><i class="fa-solid fa-xmark" style="color: #ffffff;"></i> Excluir Motorista</strong></button>
+
+        <button class="btn btn-secondary" onclick="history.back()"><strong><i class="fa-solid fa-rotate-left" style="color: #ffffff;"></i> Voltar</strong></button>
+    </div>
+    <!-- Footer -->
+    <%- include('../partials/footer.ejs') %>
+
+    
 </body>
 </html>
